# fixed-size-buf

./: Cargo.toml
src/: backing_buffer.rs  buffer.rs  futures.rs  lib.rs
