[package]
name = "fixed-size-buf"
version = "1.0.0"
edition = "2021"
description = "Fixed size async buffer pool"
license = "MIT"

[dependencies]
crossbeam-queue = "0.3.12"
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
futures = "0.3.31"
memmap2 = "0.9.5"
oneshot = "0.1.10"
tempdir = "0.3.7"

[features]
default = []
memmap = ["dep:memmap2"]
